[gd_scene load_steps=6 format=3 uid="uid://dl2o8qjiic7t0"]

[ext_resource type="Script" uid="uid://1wc1jvutjw4v" path="res://States/npc_idle.gd" id="1_a41yc"]
[ext_resource type="PackedScene" uid="uid://bhwn8uo4g627j" path="res://States/state_machine.tscn" id="2_rch0r"]
[ext_resource type="PackedScene" uid="uid://bogpaq70csxuw" path="res://States/npc_idle_stand.tscn" id="3_xmuhr"]
[ext_resource type="PackedScene" uid="uid://cqrjjkq5ghuux" path="res://States/npc_idle_turn.tscn" id="4_ijuat"]
[ext_resource type="PackedScene" uid="uid://d0thbvrt86t67" path="res://States/npc_idle_walk.tscn" id="5_b0r58"]

[node name="NpcIdle" type="Node"]
script = ExtResource("1_a41yc")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("2_rch0r")]
initial_state = NodePath("NpcIdleStand")

[node name="NpcIdleStand" parent="StateMachine" node_paths=PackedStringArray("idleTurnState", "idleWalkState") instance=ExtResource("3_xmuhr")]
idleTurnState = NodePath("../NpcIdleTurn")
idleWalkState = NodePath("../NpcIdleWalk")

[node name="NpcIdleTurn" parent="StateMachine" node_paths=PackedStringArray("idleWalkState", "idleStandState") instance=ExtResource("4_ijuat")]
idleWalkState = NodePath("../NpcIdleWalk")
idleStandState = NodePath("../NpcIdleStand")

[node name="NpcIdleWalk" parent="StateMachine" instance=ExtResource("5_b0r58")]
